# mdict-rs-py

./: .gitignore  Cargo.toml  README.md  RELEASE.md  build-wheels.sh  example.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml
src/: lib.rs
src/mdict/: keyblock.rs  mdx.rs
