[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "mdict-rs"
version = "0.1.0"
description = "Python bindings for mdict-rs: A fast MDict dictionary format parser"
authors = [
    {name = "zhimoe"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]
keywords = ["mdict", "dictionary", "parser", "rust", "pyo3"]

[project.urls]
Repository = "https://github.com/zhimoe/mdict-rs-py"

[tool.maturin]
module-name = "mdict_rs"